<resources>
    <string name="app_name">Mudita</string>
    <string name="pinkumbrella">pinkumbrella</string>
    <string name="loginlady">loginlady</string>
    <string name="sign_in">Sign in</string>
    <string name="emailtext">Email</string>
    <string name="passwordtext">Password</string>
    <string name="ortext">-Or-</string>
    <string name="loginbutton">Login</string>
    <string name="fblogo">fblogo</string>
    <string name="googlelogo">googlelogo</string>
    <string name="password">Password</string>
    <string name="donthaveaccount">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="forgotpassword">Forgot password ?</string>
    <string name="name">Name</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enteremail">Enter  Email</string>
    <string name="enterage">Date of Birth (dd/mm/yy)</string>
    <string name="maletext">Male</string>
    <string name="femaletext">Female</string>
    <string name="alreadyaccount">Already have an account ?</string>
    <string name="title_activity_mainscreen1">Mainscreen1</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="facebook_app_id">687325862038410</string>
    <string name="fb_login_protocol_scheme">fb687325862038410</string>
    <string name="medicinemissed">AZITHROM 500</string>
    <string name="numbermissed">Missed 4 times</string>


    <string name="home_second">Home Second</string>
</resources>
