<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B252F"
    tools:context=".Registerscreen">


    <EditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="528dp"
        android:background="@drawable/roundbuttoncolor1"
        android:fontFamily="@font/fanwood_text_italic"
        android:foregroundGravity="center"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:elevation="10dp"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="#AEA7A7"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="444dp"
        android:background="@drawable/roundbuttoncolor2"
        android:fontFamily="@font/fanwood_text_italic"
        android:hint="@string/enteremail"
        android:elevation="10dp"
        android:paddingLeft="12dp"
        android:shadowColor="#813C48"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="#AEA7A7"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordreg"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/roundbuttoncolor3"
        android:fontFamily="@font/fanwood_text_italic"
        android:hint="@string/enterpassword"
        android:elevation="10dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="#AEA7A7"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="277dp"
        android:background="@drawable/roundbuttoncolor4"
        android:ems="10"
        android:fontFamily="@font/fanwood_text_italic"
        android:hint="@string/enterage"
        android:elevation="10dp"
        android:inputType="textPersonName"
        android:paddingLeft="13dp"
        android:singleLine="true"
        android:textColor="#AEA7A7"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="628dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="39sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/maleicon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:srcCompat="@drawable/male" />

    <ImageView
        android:id="@+id/femaleicon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/maleicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maleicon"
        app:layout_constraintTop_toTopOf="@+id/maleicon"
        app:srcCompat="@drawable/female" />

    <TextView
        android:id="@+id/maletext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/acme"
        android:text="@string/maletext"
        android:textColor="#4D6060"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/maleicon"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/maleicon"
        app:layout_constraintTop_toBottomOf="@+id/maleicon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/femaletext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/acme"
        android:text="@string/femaletext"
        android:textColor="#4D6060"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/femaleicon"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toEndOf="@+id/maletext"
        app:layout_constraintTop_toBottomOf="@+id/femaleicon"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="wrap_content"
        style=""
        android:layout_height="35dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/acme"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#8C8787"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/femaletext"
        app:layout_constraintEnd_toEndOf="@+id/femaletext"
        app:layout_constraintStart_toStartOf="@+id/maletext"
        app:layout_constraintTop_toTopOf="@+id/femaleicon" />

    <TextView
        android:id="@+id/alreadyaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/alreadyaccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbutton" />

    <Button
        android:id="@+id/signintransparent"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/acme"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toBottomOf="@+id/alreadyaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/alreadyaccount"
        app:layout_constraintTop_toTopOf="@+id/alreadyaccount"
        app:layout_constraintVertical_bias="0.482" />

</androidx.constraintlayout.widget.ConstraintLayout>